--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -27,6 +27,10 @@ a {
     color: #ff3f3f;
 }
 
+.box-top {
+    margin-bottom: 35px;
+}
+
 
 /*SCHOOL YEAR*/
 
@@ -88,6 +92,15 @@ a {
     z-index: 1000;
     right: 68px;
     top: -4px;
+}
+
+.filter-year {
+    display: inline-flex;
+}
+
+.label-filter-year {
+    margin-top: 8px;
+    font-size: 14px;
 }
 
 
