sua forn nam hoc

--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -91,6 +91,14 @@ a {
     width: 50%;
 }
 
+.del-one-year {
+    margin-left: 18px;
+}
+
+.box-remove-all {
+    margin-bottom: 50px;
+}
+
 
 /*END SCHOOL YEAR */
 
