--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -27,9 +27,10 @@ a {
     color: #ff3f3f;
 }
 
-.box-top {
+
+/* .box-top {
     margin-bottom: 35px;
-}
+} */
 
 .checkbox-common {
     width: 17px;
@@ -84,8 +85,8 @@ a {
 }
 
 .checkbox-remove {
-    width: 17px;
-    height: 17px;
+    width: 15px;
+    height: 15px;
 }
 
 .input-search-custom {
@@ -101,13 +102,14 @@ a {
     margin-left: 18px;
 }
 
-.box-remove-all {
-    margin-bottom: 30px;
+.box-remove-all button {
+    margin-bottom: 20px;
 }
 
-.btn-remove {
+
+/* .btn-remove {   
     margin-top: 20px;
-}
+} */
 
 
 /*END SCHOOL YEAR */
