--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -72,6 +72,8 @@ a {
 
 .add-btn {
     margin-left: 10%;
+    margin-top: 30px;
+    z-index: 1;
 }
 
 .filter {
@@ -123,6 +125,10 @@ a {
 
 .del-one-year {
     margin-left: 18px;
+}
+
+.box-remove-all {
+    margin-top: -34px;
 }
 
 .box-remove-all button {
