--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -135,6 +135,11 @@ a {
     margin-bottom: 20px;
 }
 
+.footers {
+    width: 100%;
+    height: 1px;
+}
+
 
 /* .btn-remove {   
     margin-top: 20px;
