--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -135,9 +135,14 @@ a {
     margin-bottom: 20px;
 }
 
-.footers {
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
-    height: 1px;
+    background-color: #f1f1f1;
+    color: black;
+    text-align: center;
 }
 
 
