--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -104,6 +104,11 @@ a {
     margin-top: 30px;
     z-index: 1;
 }
+.add-btn1 {
+    margin-left: 0%;
+    margin-top: 30px;
+    z-index: 1;
+}
 
 .filter {
     margin-left: 10%;
