--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -36,6 +36,10 @@ a {
     color: #ff3f3f;
 }
 
+.nav-default {
+    background: #e4dfdf;
+}
+
 
 /* .box-top {
     margin-bottom: 35px;
@@ -53,6 +57,7 @@ a {
 .stt {
     width: 10%;
 }
+
 .stt1 {
     width: 8%;
 }
@@ -60,12 +65,15 @@ a {
 .th1 {
     width: 22%;
 }
+
 .th2 {
     width: 23%;
 }
+
 .th3 {
     width: 9%;
 }
+
 .th4 {
     width: 15%;
 }
@@ -78,6 +86,7 @@ a {
 .cus {
     width: 14%;
 }
+
 .cus1 {
     width: 10%;
 }
@@ -104,6 +113,7 @@ a {
     margin-top: 30px;
     z-index: 1;
 }
+
 .add-btn1 {
     margin-left: 0%;
     margin-top: 30px;
@@ -126,8 +136,8 @@ a {
 .table-school-year {
     color: white;
     background: #337ab7;
-
 }
+
 .table-school-year1 {
     color: white;
     background: #337ab7;
