Chinh sua Dash moi

--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -49,6 +49,12 @@ a {
     width: 17px;
     height: 17px;
 }
+.space {
+line-height:110px
+}
+.space1 {
+line-height:350px
+}
 
 .act {
     width: 10%;
