sua loi view cac trang, them loc va xoa tim kiem

--- a/public/admin_uet/css/style.css
+++ b/public/admin_uet/css/style.css
@@ -126,14 +126,35 @@ a {
     z-index: 1;
 }
 
+.add-btn-oth {
+    margin-left: 10%;
+    margin-top: -2px;
+    z-index: 1;
+}
+
 .add-btn-orther {
     z-index: 1;
 }
 
-.add-btn1 {
+.add-btn-course {
+    margin-bottom: 30px;
+    z-index: 1;
+}
+
+.add-btn-1 {
+    /* margin-left: 1%; */
+    margin-top: -2px;
+    z-index: 1;
+}
+
+.add-btn-2 {
     margin-left: 1%;
     margin-top: 30px;
     z-index: 1;
+}
+
+.row-filter {
+    margin-bottom: 35px;
 }
 
 .filter {
@@ -156,6 +177,11 @@ a {
 .label-filter {
     margin-top: 4px;
     font-size: 17px;
+}
+
+.remove-btn-session-other {
+    float: right;
+    margin-top: -35px;
 }
 
 
@@ -239,6 +265,10 @@ a {
 .data_value_teach_other {
     width: 15%;
     margin-left: 3%;
+}
+
+.remove-btn-session {
+    float: right;
 }
 
 
